# ESP32_IOT_MQTT

./: README.md
components/communication/: CMakeLists.txt
components/communication/mqtt/: mqtt.c  mqtt.h
components/communication/sntp/: sync_time.c  sync_time.h
components/communication/wifi/: wifi.c  wifi.h
components/drivers/: CMakeLists.txt  GS_interface.h
components/drivers/dht11/: dht11.c  dht11.h
components/drivers/hcsr04/: hcsr04.c  hcsr04.h
components/drivers/hw038/: hw038.c  hw038.h
components/drivers/liquid_crystal/: lcd1602.c  lcd1602.h
components/drivers/relay/: relay.c  relay.h
components/measurement/: CMakeLists.txt  measurement.c  measurement.h
components/shared_memory/: CMakeLists.txt  shared_mem.c  shared_mem.h
components/tasks/: CMakeLists.txt
components/tasks/distance_task/: distance_task.c  distance_task.h
components/tasks/lcd1602_task/: lcd1602_task.c  lcd1602_task.h
components/tasks/led_rgb_task/: rgb_task.c  rgb_task.h
components/tasks/mqtt_task/: mqtt_task.c  mqtt_task.h
components/tasks/temp_humid_task/: temp_humid_task.c  temp_humid_task.h
components/tasks/water_level_task/: water_level_task.c  water_level_task.h
components/utilities/: CMakeLists.txt  utilities.h
main/: main.c
